kubernetes/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: website
  namespace: carldanley-com
  labels:
    app: website
spec:
  replicas: 3
  revisionHistoryLimit: 10
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - name: website
        image: carldanley/website:0.1.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          protocol: TCP
      terminationGracePeriodSeconds: 60
