kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: carldanley-com
  labels:
    app: website
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: website
