kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: website
  namespace: carldanley-com
  labels:
    app: website
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: carldanley.com
    http:
      paths:
      - path: /
        backend:
          serviceName: website
          servicePort: 80
  tls:
  - hosts:
    - carldanley.com
    secretName: carldanley-com-tls
